--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "evedbexplorer",
+	"name": "eve-db-explorer",
 	"description": "An web based item database for Eve online.",
 	"version": "0.1.0",
     "private": true,
@@ -8,6 +8,7 @@
 		"morgan": "~1.0.x",
 		"body-parser": "~1.0.x",
 		"method-override": "~1.0.x",
+		"jade": "~1.3.x",
 	},
 	"devDependencies": {
 		"grunt-autoprefixer": "0.6.x",
