--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"morgan": "~1.0.x",
 		"body-parser": "~1.0.x",
 		"method-override": "~1.0.x",
-		"jade": "~1.3.x",
+		"jade": "~1.3.x"
 	},
 	"devDependencies": {
 		"grunt-autoprefixer": "0.6.x",
